fix(navbar): Fix z-index and close on click

--- a/src/app/core/components/main-layout/main-layout.component.scss
+++ b/src/app/core/components/main-layout/main-layout.component.scss
@@ -1,4 +1,5 @@
 app-navbar {
     position: sticky;
     top: 0;
+    z-index: 10;
 }
