--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -7,6 +7,7 @@
     width: 100%;
     text-align: center;
     transition: top linear .2s;
+    z-index: 11;
 
     &.open {
         top: 0;
@@ -14,7 +15,7 @@
 }
 
 .toggle-nav {
-    z-index: 2;
+    z-index: 12;
 }
 
 @media (min-width: 64rem) {
