--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -30,7 +30,7 @@ body {
     --title-font-family-name: var(--font-family-sans-serif-1);
     --title-font-family-style: Medium;
     --title-font-weight: 500px;
-    --title-font-size: 16px;
+    --title-font-size: 18px;
     --title-line-height: 20px;
     --title-letter-spacing: 0.10px;
 
@@ -38,16 +38,16 @@ body {
     --medium-font-family-name: var(--font-family-sans-serif-1);
     --medium-font-family-style: Regular;
     --medium-font-weight: 400px;
-    --medium-font-size: 14px;
-    --medium-line-height: 18px;
+    --medium-font-size: 15px;
+    --medium-line-height: 19px;
     --medium-letter-spacing: 0.20px;
 
     /* body - small */
     --body-font-family-name: var(--font-family-sans-serif-1);
     --body-font-family-style: Regular;
     --body-font-weight: 400px;
-    --body-font-size: 13px;
-    --body-line-height: 16px;
+    --body-font-size: 14px;
+    --body-line-height: 17px;
     --body-letter-spacing: 0.40px;
 
     /* label - small */
@@ -82,7 +82,7 @@ body {
         --title-font-family-name: var(--font-family-sans-serif-1);
         --title-font-family-style: Medium;
         --title-font-weight: 500px;
-        --title-font-size: 16px;
+        --title-font-size: 20px;
         --title-line-height: 24px;
         --title-letter-spacing: 0.15px;
 
@@ -90,7 +90,7 @@ body {
         --medium-font-family-name: var(--font-family-sans-serif-1);
         --medium-font-family-style: Regular;
         --medium-font-weight: 400px;
-        --medium-font-size: 15px;
+        --medium-font-size: 16px;
         --medium-line-height: 22px;
         --medium-letter-spacing: 0.20px;
 
@@ -98,7 +98,7 @@ body {
         --body-font-family-name: var(--font-family-sans-serif-1);
         --body-font-family-style: Regular;
         --body-font-weight: 400px;
-        --body-font-size: 14px;
+        --body-font-size: 15px;
         --body-line-height: 20px;
         --body-letter-spacing: 0.25px;
 
@@ -106,7 +106,7 @@ body {
         --label-font-family-name: var(--font-family-sans-serif-1);
         --label-font-family-style: Medium;
         --label-font-weight: 500px;
-        --label-font-size: 12px;
+        --label-font-size: 13px;
         --label-line-height: 16px;
         --label-letter-spacing: 0.50px;
     }
