--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -19,7 +19,7 @@
 .rounded-button {
     border: none;
     border-radius: 100em;
-    padding: .5rem 1rem;
+    padding: .5em 1em;
     display: flex;
     align-items: center;
     justify-content: center;
